...
        static let relatedCellIdentifier = "Relate"
        static let alertTitleText = "Ой!"
        static let alertMessageText = "Произошла ошибка(("
        static let alertActionTitleText = "Ok"
        static let sizeForItemAtWidthValue = 150
        static let sizeForItemAtHeightValue = 200
        static let detailsMovieTableViewIdentifier = "DetailsMovie"
        static let cellIdentifier = "cellIdentifier"
    }

    // MARK: - Private Outlets

    private var tableView: UITableView = {
...
