...
        static let reducedAlphaOfButtonValue = 0.5
        static let buttonsAnimateDuration = 0.2
        static let tableViewWillDisplayRowDegreeValue = 60
        static let angel = 180.0
        static let tableViewRowAnimateDurationValue = 0.15
        static let tableViewRowAnimateDelayValue = 0.15
        static let moviesTableViewIdentifier = "Movies"
        static let cellIdentifier = "cellIdentifier"
    }

    private enum ConstantsOfConstraint {
        static let topRatedButtonLeadingOfSafeAreaValue: CGFloat = 10
        static let buttonHeightValue: CGFloat = 50
...
